--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "student-mgr",
+  "name": "student-mgr-sys",
   "version": "1.0.0",
+  "description": "This project is a web-based Student Record Management System designed for an educational institute. It automates manual processes associated with managing student records, providing a user-friendly interface for the student affairs unit. The system employs a REST API for backend resource management.",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -10,15 +11,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "fs": "^0.0.1-security",
-    "mongoose": "^8.0.2"
-  },
-  "description": "",
-  "devDependencies": {
-    "dotenv": "^16.3.1",
-    "nodemon": "^3.0.2"
+    "express": "^4.18.2"
   }
 }
